// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewCommandBar renders with export button, with start over 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\" aria-labelledby=\\"switch-to-target\\">
    <span id=\\"switch-to-target\\">
      Target page: 
    </span>
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: proxy]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
  <div className=\\"detailsViewCommandButtons\\">
    <CustomizedActionButton>
      Report Export Component
    </CustomizedActionButton>
    <CustomizedActionButton>
      Start Over Component
    </CustomizedActionButton>
  </div>
</div>"
`;

exports[`DetailsViewCommandBar renders with export button, without start over 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\" aria-labelledby=\\"switch-to-target\\">
    <span id=\\"switch-to-target\\">
      Target page: 
    </span>
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: proxy]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
  <div className=\\"detailsViewCommandButtons\\">
    <CustomizedActionButton>
      Report Export Component
    </CustomizedActionButton>
  </div>
</div>"
`;

exports[`DetailsViewCommandBar renders without export button, with start over 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\" aria-labelledby=\\"switch-to-target\\">
    <span id=\\"switch-to-target\\">
      Target page: 
    </span>
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: proxy]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
  <div className=\\"detailsViewCommandButtons\\">
    <CustomizedActionButton>
      Start Over Component
    </CustomizedActionButton>
  </div>
</div>"
`;

exports[`DetailsViewCommandBar renders without export button, without start over 1`] = `
"<div className=\\"details-view-command-bar\\">
  <div className=\\"details-view-target-page\\" aria-labelledby=\\"switch-to-target\\">
    <span id=\\"switch-to-target\\">
      Target page: 
    </span>
    <StyledLinkBase role=\\"link\\" title=\\"Switch to target page\\" className=\\"insights-link target-page-link\\" onClick={[Function: proxy]}>
      command-bar-test-tab-title
    </StyledLinkBase>
  </div>
</div>"
`;
